// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WeatherTab /> renders correctly with default values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    date="AUG 10"
    day="SAT"
    dayMax="22"
    icon="https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png"
    nightMin="5"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <glamorous(div)
          backgroundColour="rgba(34, 37, 38, 0.4)"
          className="WeatherTabArrow"
          visible={true}
        />,
        <glamorous(div)
          backgroundColour="rgba(34, 37, 38, 0.4)"
          className="WeatherTabBody"
          selected={false}
        >
          <glamorous(div)
            className="WeatherTabDay"
            colour="#ffffff"
          >
            SAT
            <glamorous(div)>
              , AUG 10
            </glamorous(div)>
          </glamorous(div)>
          <glamorous(glamorous(div))
            className="WeatherTabIcon"
            iconUrl="https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png"
          />
          <glamorous(div)
            className="WeatherTabTemperature"
            colour="#ffffff"
          >
            22° | 
            <span
              style={
                Object {
                  "color": "#4085cb",
                }
              }
            >
              5°
            </span>
          </glamorous(div)>
        </glamorous(div)>,
      ],
      "onClick": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "backgroundColour": "rgba(34, 37, 38, 0.4)",
          "className": "WeatherTabArrow",
          "visible": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "backgroundColour": "rgba(34, 37, 38, 0.4)",
          "children": Array [
            <glamorous(div)
              className="WeatherTabDay"
              colour="#ffffff"
            >
              SAT
              <glamorous(div)>
                , AUG 10
              </glamorous(div)>
            </glamorous(div)>,
            <glamorous(glamorous(div))
              className="WeatherTabIcon"
              iconUrl="https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png"
            />,
            <glamorous(div)
              className="WeatherTabTemperature"
              colour="#ffffff"
            >
              22° | 
              <span
                style={
                  Object {
                    "color": "#4085cb",
                  }
                }
              >
                5°
              </span>
            </glamorous(div)>,
          ],
          "className": "WeatherTabBody",
          "selected": false,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "SAT",
                <glamorous(div)>
                  , AUG 10
                </glamorous(div)>,
              ],
              "className": "WeatherTabDay",
              "colour": "#ffffff",
            },
            "ref": null,
            "rendered": Array [
              "SAT",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": ", AUG 10",
                },
                "ref": null,
                "rendered": ", AUG 10",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "WeatherTabIcon",
              "iconUrl": "https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "22° | ",
                <span
                  style={
                    Object {
                      "color": "#4085cb",
                    }
                  }
                >
                  5°
                </span>,
              ],
              "className": "WeatherTabTemperature",
              "colour": "#ffffff",
            },
            "ref": null,
            "rendered": Array [
              "22° | ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "5°",
                  "style": Object {
                    "color": "#4085cb",
                  },
                },
                "ref": null,
                "rendered": "5°",
                "type": "span",
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <glamorous(div)
            backgroundColour="rgba(34, 37, 38, 0.4)"
            className="WeatherTabArrow"
            visible={true}
          />,
          <glamorous(div)
            backgroundColour="rgba(34, 37, 38, 0.4)"
            className="WeatherTabBody"
            selected={false}
          >
            <glamorous(div)
              className="WeatherTabDay"
              colour="#ffffff"
            >
              SAT
              <glamorous(div)>
                , AUG 10
              </glamorous(div)>
            </glamorous(div)>
            <glamorous(glamorous(div))
              className="WeatherTabIcon"
              iconUrl="https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png"
            />
            <glamorous(div)
              className="WeatherTabTemperature"
              colour="#ffffff"
            >
              22° | 
              <span
                style={
                  Object {
                    "color": "#4085cb",
                  }
                }
              >
                5°
              </span>
            </glamorous(div)>
          </glamorous(div)>,
        ],
        "onClick": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "backgroundColour": "rgba(34, 37, 38, 0.4)",
            "className": "WeatherTabArrow",
            "visible": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "backgroundColour": "rgba(34, 37, 38, 0.4)",
            "children": Array [
              <glamorous(div)
                className="WeatherTabDay"
                colour="#ffffff"
              >
                SAT
                <glamorous(div)>
                  , AUG 10
                </glamorous(div)>
              </glamorous(div)>,
              <glamorous(glamorous(div))
                className="WeatherTabIcon"
                iconUrl="https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png"
              />,
              <glamorous(div)
                className="WeatherTabTemperature"
                colour="#ffffff"
              >
                22° | 
                <span
                  style={
                    Object {
                      "color": "#4085cb",
                    }
                  }
                >
                  5°
                </span>
              </glamorous(div)>,
            ],
            "className": "WeatherTabBody",
            "selected": false,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "SAT",
                  <glamorous(div)>
                    , AUG 10
                  </glamorous(div)>,
                ],
                "className": "WeatherTabDay",
                "colour": "#ffffff",
              },
              "ref": null,
              "rendered": Array [
                "SAT",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": ", AUG 10",
                  },
                  "ref": null,
                  "rendered": ", AUG 10",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "className": "WeatherTabIcon",
                "iconUrl": "https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "22° | ",
                  <span
                    style={
                      Object {
                        "color": "#4085cb",
                      }
                    }
                  >
                    5°
                  </span>,
                ],
                "className": "WeatherTabTemperature",
                "colour": "#ffffff",
              },
              "ref": null,
              "rendered": Array [
                "22° | ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "5°",
                    "style": Object {
                      "color": "#4085cb",
                    },
                  },
                  "ref": null,
                  "rendered": "5°",
                  "type": "span",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<WeatherTab /> renders correctly with selected false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    date="AUG 10"
    day="SAT"
    dayMax="22"
    icon="https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png"
    nightMin="5"
    selected={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <glamorous(div)
          backgroundColour="rgba(34, 37, 38, 1)"
          className="WeatherTabArrow"
          visible={false}
        />,
        <glamorous(div)
          backgroundColour="rgba(34, 37, 38, 1)"
          className="WeatherTabBody"
          selected={true}
        >
          <glamorous(div)
            className="WeatherTabDay"
            colour="#ffffff"
          >
            SAT
            <glamorous(div)>
              , AUG 10
            </glamorous(div)>
          </glamorous(div)>
          <glamorous(glamorous(div))
            className="WeatherTabIcon"
            iconUrl="https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png"
          />
          <glamorous(div)
            className="WeatherTabTemperature"
            colour="#ffffff"
          >
            22° | 
            <span
              style={
                Object {
                  "color": "#4085cb",
                }
              }
            >
              5°
            </span>
          </glamorous(div)>
        </glamorous(div)>,
      ],
      "onClick": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "backgroundColour": "rgba(34, 37, 38, 1)",
          "className": "WeatherTabArrow",
          "visible": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "backgroundColour": "rgba(34, 37, 38, 1)",
          "children": Array [
            <glamorous(div)
              className="WeatherTabDay"
              colour="#ffffff"
            >
              SAT
              <glamorous(div)>
                , AUG 10
              </glamorous(div)>
            </glamorous(div)>,
            <glamorous(glamorous(div))
              className="WeatherTabIcon"
              iconUrl="https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png"
            />,
            <glamorous(div)
              className="WeatherTabTemperature"
              colour="#ffffff"
            >
              22° | 
              <span
                style={
                  Object {
                    "color": "#4085cb",
                  }
                }
              >
                5°
              </span>
            </glamorous(div)>,
          ],
          "className": "WeatherTabBody",
          "selected": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "SAT",
                <glamorous(div)>
                  , AUG 10
                </glamorous(div)>,
              ],
              "className": "WeatherTabDay",
              "colour": "#ffffff",
            },
            "ref": null,
            "rendered": Array [
              "SAT",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": ", AUG 10",
                },
                "ref": null,
                "rendered": ", AUG 10",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "WeatherTabIcon",
              "iconUrl": "https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "22° | ",
                <span
                  style={
                    Object {
                      "color": "#4085cb",
                    }
                  }
                >
                  5°
                </span>,
              ],
              "className": "WeatherTabTemperature",
              "colour": "#ffffff",
            },
            "ref": null,
            "rendered": Array [
              "22° | ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "5°",
                  "style": Object {
                    "color": "#4085cb",
                  },
                },
                "ref": null,
                "rendered": "5°",
                "type": "span",
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <glamorous(div)
            backgroundColour="rgba(34, 37, 38, 1)"
            className="WeatherTabArrow"
            visible={false}
          />,
          <glamorous(div)
            backgroundColour="rgba(34, 37, 38, 1)"
            className="WeatherTabBody"
            selected={true}
          >
            <glamorous(div)
              className="WeatherTabDay"
              colour="#ffffff"
            >
              SAT
              <glamorous(div)>
                , AUG 10
              </glamorous(div)>
            </glamorous(div)>
            <glamorous(glamorous(div))
              className="WeatherTabIcon"
              iconUrl="https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png"
            />
            <glamorous(div)
              className="WeatherTabTemperature"
              colour="#ffffff"
            >
              22° | 
              <span
                style={
                  Object {
                    "color": "#4085cb",
                  }
                }
              >
                5°
              </span>
            </glamorous(div)>
          </glamorous(div)>,
        ],
        "onClick": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "backgroundColour": "rgba(34, 37, 38, 1)",
            "className": "WeatherTabArrow",
            "visible": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "backgroundColour": "rgba(34, 37, 38, 1)",
            "children": Array [
              <glamorous(div)
                className="WeatherTabDay"
                colour="#ffffff"
              >
                SAT
                <glamorous(div)>
                  , AUG 10
                </glamorous(div)>
              </glamorous(div)>,
              <glamorous(glamorous(div))
                className="WeatherTabIcon"
                iconUrl="https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png"
              />,
              <glamorous(div)
                className="WeatherTabTemperature"
                colour="#ffffff"
              >
                22° | 
                <span
                  style={
                    Object {
                      "color": "#4085cb",
                    }
                  }
                >
                  5°
                </span>
              </glamorous(div)>,
            ],
            "className": "WeatherTabBody",
            "selected": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "SAT",
                  <glamorous(div)>
                    , AUG 10
                  </glamorous(div)>,
                ],
                "className": "WeatherTabDay",
                "colour": "#ffffff",
              },
              "ref": null,
              "rendered": Array [
                "SAT",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": ", AUG 10",
                  },
                  "ref": null,
                  "rendered": ", AUG 10",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "className": "WeatherTabIcon",
                "iconUrl": "https://www.thesun.co.uk/wp-content/uploads/2018/11/Sunny.png",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "22° | ",
                  <span
                    style={
                      Object {
                        "color": "#4085cb",
                      }
                    }
                  >
                    5°
                  </span>,
                ],
                "className": "WeatherTabTemperature",
                "colour": "#ffffff",
              },
              "ref": null,
              "rendered": Array [
                "22° | ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "5°",
                    "style": Object {
                      "color": "#4085cb",
                    },
                  },
                  "ref": null,
                  "rendered": "5°",
                  "type": "span",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
